# virtualenv-tauthon

./: LICENSE  README.md  pyproject.toml
src/virtualenv_tauthon/: __init__.py  create.py
